combiner/target/debug/build/rayon-77c2efa0e568b6dd/stderr
error[E0658]: const generics are unstable
 --> <anon>:1:42
  |
1 | pub fn probe() { let _ = { fn _foo<const N: usize>() {} }; }
  |                                          ^
  |
  = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
error[E0432]: unresolved import `std::ops::ControlFlow`
 --> <anon>:1:9
  |
1 | pub use std::ops::ControlFlow;
  |         ^^^^^^^^^^^^^^^^^^^^^ no `ControlFlow` in `ops`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
